<resources>
    <string name="string_hint_edittext_search">دنبال چی میگردی ؟</string>
    <string name="string_error_edittext_search">لطفا این قسمت رو پر کنید</string>
    <string name="string_error_loading_results">اتصال اینترنت خود را برسی کنید</string>
    <string name="string_error_not_find_results">هیچ نتیجه ای برای این جستجو یافت نشد</string>
    <string name="string_retry_find_results">تلاش مجدد</string>
    <string name="string_download_images">دانلود عکس</string>
    <string name="string_download_share">اشتراک گزاری</string>
    <string name="string_wallpaper_images">تنظیم به عنوان تصویر پس زمینه</string>
    <string name="string_views_images">بازدیدها</string>
    <string name="string_downloads_images">دانلود ها</string>
    <string name="string_likes_images">تعداد لایک ها</string>
    <string name="string_photo_info">اطلاعات عکس</string>
    <string name="string_photo_category">دسته بندی عکس</string>
    <string name="string_photo_location">موقعیت مکانی عکس</string>
    <string name="string_camera_info">اطلاعات دوربین</string>
    <string name="string_alert_exist_photo">این تصویر در حافظه موجود می باشد</string>
    <string name="string_title_download_dialog">در حال دانلود ...</string>
    <string name="string_waiting_download_dialog">لطفا صبر کنید تا دانلود بارگیری شود...</string>
    <string name="string_alert_success_wallpaper">تصویر پس زمینه با موفقیت اعمال شد</string>
    <string name="string_alert_success_download">دانلود با موفقیت انجام شد</string>
    <string name="string_alert_start_download">در حال دانلود تصویر ...</string>
    <string name="string_alert_network_error">خطای شبکه ، اتصال به اینترنت خود را برسی کنید</string>
    <string name="string_alert_permission">خطا در ساخت مسیر ذخیره فایل</string>
    <string name="string_empty_photo_info">اطلاعاتی توسط عکاس ثبت نشده!</string>
    <string name="string_title_alert_ok_permission">تایید دستی مجوز دسترسی به حافظه</string>
    <string name="string_title_alert_detail_ok_permission">برای دانلود تصاویر و اشتراک گزاری آنها نیاز به مجور دسترسی به حافظه می باشد . \n لطفا در تنظیمات برنامه مجوز را فعال کنید</string>
    <string name="string_my_download_title">دانلود های من</string>
    <string name="string_my_download_bottom_sheet_title">دانلود های من / تصویر</string>
    <string name="string_photo_detail_bottom_sheet_title">تصویر</string>
    <string name="string_empty_my_download_alert">تصویری موجود نمی باشد</string>
    <string name="string_delete_my_download">حذف تصویر از حافظه</string>
    <string name="string_btn_cancel">انصراف</string>
    <string name="string_btn_setting">تنظیمات</string>
    <string name="string_btn_update">بروز رسانی</string>
    <string name="string_btn_delete">حذف شود</string>
    <string name="string_title_delete_alert">آیا از حذف این عکس اطمینان دارید؟</string>
    <string name="string_title_delete_detail_alert">این عکس از حافظه دستگاه شما حذف خواهد شد</string>
    <string name="string_alert_delete_photo">عکس با موفقیت از حافظه پاک شد</string>


</resources>