<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background_fragments"
    android:orientation="vertical"
    tools:context=".ui.gallery.GalleryFragment">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/toolbar_home"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal"
        android:background="@color/purple_500">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingEnd="7dp"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            app:spanCount="2"
            tools:itemCount="10"
            tools:listitem="@layout/item_unsplash_photo" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loading_anim_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:visibility="gone"
            app:lottie_autoPlay="true"
            app:lottie_colorFilter="@color/purple_200"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading"
            app:tint="#fff"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/text_view_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/button_retry"
            android:layout_centerHorizontal="true"
            android:text="@string/string_error_loading_results"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/string_retry_find_results"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/text_view_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/string_error_not_find_results"
            android:visibility="gone"
            tools:visibility="visible" />

    </RelativeLayout>

</LinearLayout>